[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
wgpu = "0.18"
winit = "0.28"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
